boulder/tests/compile_fail/match/if_no_else.bo
# Mismatched types
# found `Empty`
# expected `u8`
# (7:

fn a() -> u8 {
    if True {
        4
    }
}